--- a/_includes/profile-card.html
+++ b/_includes/profile-card.html
@@ -15,8 +15,8 @@
 
 
 <div class="mt-4 flex flex-wrap gap-2">
-<a href="https://github.com/{{ site.author.github }}" target="_blank" rel="noopener" class="px-3 py-1 bg-white/10 rounded">GitHub</a>
-<a href="https://twitter.com/{{ site.author.twitter }}" target="_blank" rel="noopener" class="px-3 py-1 bg-white/10 rounded">Twitter</a>
+<a href="https://github.com/adewoleadewale" target="_blank" rel="noopener" class="px-3 py-1 bg-white/10 rounded">GitHub</a>
+<a href="https://twitter.com/adewoleadewaleG" target="_blank" rel="noopener" class="px-3 py-1 bg-white/10 rounded">Twitter</a>
 <a href="{{ site.author.resume }}" class="px-3 py-1 bg-white/10 rounded">Resume</a>
 </div>
 </div>
